--- a/kamailio/config/kamailio.cfg
+++ b/kamailio/config/kamailio.cfg
@@ -54,7 +54,7 @@ include_file "/data/kamailio/local.k"
 #     - define WITH_MSGREBUILD
 #
 # *** To enable nat traversal execute:
-#     - define WITH_NAT
+#!define WITH_NAT
 #     - option for NAT SIP OPTIONS keepalives: WITH_NATSIPPING
 #     - install RTPProxy: http://www.rtpproxy.org
 #     - start RTPProxy:
