--- a/rtpengine/rtpengine.conf
+++ b/rtpengine/rtpengine.conf
@@ -2,12 +2,12 @@
 interface=MY_IP
 foreground=true
 log-stderr=true
-listen-ng=MY_IP:22222
-port-min=23000
-port-max=32768
+listen-ng=PRIVATE_IP:2223
+port-min=30000
+port-max=30500
 recording-dir=/tmp
 recording-method=pcap
 recording-format=eth
 log-level=6
 delete-delay=0
-listen-http=MY_IP:8080
+listen-http=8080
