--- a/kamailio/Dockerfile
+++ b/kamailio/Dockerfile
@@ -2,7 +2,7 @@ FROM debian:buster
 MAINTAINER Jerry Drung "efficacy38@gmail.com"
 
 RUN apt-get update && \
-    apt-get install -y curl procps gnupg2 sngrep && \
+    apt-get install -y curl procps gnupg2 sngrep jq && \
     apt-get clean
 
 # Install kamailio
