--- a/k8s/03-kamailio.yaml
+++ b/k8s/03-kamailio.yaml
@@ -68,7 +68,7 @@ metadata:
   labels:
     app: kamailio
 spec:
-  replicas: 2
+  replicas: 10
   selector:
     matchLabels:
       app: kamailio
@@ -94,7 +94,10 @@ spec:
                host -t A rtpengine-service |
                cut -d ' ' -f 4 |
                xargs printf 'modparam("rtpengine", "rtpengine_sock", "udp:%s:2223")\n' |
-               tee /data/rtpengine/rtpengine.k
+               tee /data/rtpengine/rtpengine.k;
+               hostname |
+               xargs printf 'sl_send_reply(487, "%s");\n' |
+               tee /data/rtpengine/hostname.k
           volumeMounts:
             - name: rtpengine-config
               mountPath: /data/rtpengine
