--- a/k8s/configs/kamailio.cfg
+++ b/k8s/configs/kamailio.cfg
@@ -505,7 +505,7 @@ modparam("debugger", "log_level_name", "exec")
  * - note: this is the same as route { ... } */
 request_route {
 
-    include_file "/data/rtpengine/hostname.k"
+    # include_file "/data/rtpengine/hostname.k"
 
 	# per request initial checks
 	route(REQINIT);
