add database support

--- a/k8s/01-database.yaml
+++ b/k8s/01-database.yaml
@@ -1,63 +1,13 @@
-apiVersion: apps/v1
-kind: Deployment
+apiVersion: mysql.oracle.com/v2
+kind: InnoDBCluster
 metadata:
-  name: mysql-deployment
+  name: mysqldb
 spec:
-  replicas: 1
-  template:
-    metadata:
-      name: mysql
-      labels:
-        app: mysql
-    spec:
-      containers:
-      - name: mysql
-        image: mysql:5.7
-        env:
-          - name: MYSQL_ROOT_PASSWORD
-            valueFrom:
-              secretKeyRef:
-                name: helloworld-secrets
-                key: rootPassword
-          - name: MYSQL_USER
-            valueFrom:
-              secretKeyRef:
-                name: helloworld-secrets
-                key: username
-          - name: MYSQL_PASSWORD
-            valueFrom:
-              secretKeyRef:
-                name: helloworld-secrets
-                key: password
-  selector:
-    matchLabels:
-      app: mysql
-
----
-apiVersion: v1
-kind: Secret
-metadata:
-  name: helloworld-secrets
-type: Opaque
-data:
-  # username: helloworld
-  # password: password
-  # rootPassword: rootpassword
-  # database: helloworld
-  username: aGVsbG93b3JsZA==
-  password: cGFzc3dvcmQ=
-  rootPassword: cm9vdHBhc3N3b3Jk
-
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: mysql-db-service
-spec:
-  ports: db-conn
-  - port: 3306
-    targetPort: 3306
-    protocol: TCP
-  selector:
-    app: mysql
-  type: LoadBalencer
+  secretName: mypwds
+  tlsUseSelfSigned: true
+  instances: 3
+  # version: '5.7.38'
+  # version: '8.0.29'
+  router:
+    instances: 1
+    # version: '8.0.29'
