--- a/k8s/configs/kamailio.cfg
+++ b/k8s/configs/kamailio.cfg
@@ -2,6 +2,7 @@
 
 # add some global parameters,like alias
 include_file "/data/kamailio/local.k"
+include_file "/data/rtpengine/db_url.k"
 #
 # Kamailio SIP Server v5.5 - default configuration script
 #     - web: https://www.kamailio.org
@@ -30,7 +31,7 @@ include_file "/data/kamailio/local.k"
 #     - debugger module loaded with cfgtrace endabled
 #
 # *** To enable mysql:
-#     - define WITH_MYSQL
+#!define WITH_MYSQL
 #
 # *** To enable authentication execute:
 #     - enable mysql
@@ -45,7 +46,7 @@ include_file "/data/kamailio/local.k"
 #
 # *** To enable persistent user location execute:
 #     - enable mysql
-#     - define WITH_USRLOCDB
+#!define WITH_USRLOCDB
 #
 # *** To enable presence server execute:
 #     - enable mysql
@@ -409,7 +410,7 @@ modparam("usrloc", "use_domain", MULTIDOMAIN)
 /* enable DB persistency for location entries */
 #!ifdef WITH_USRLOCDB
 modparam("usrloc", "db_url", DBURL)
-modparam("usrloc", "db_mode", 2)
+modparam("usrloc", "db_mode", 3)
 #!endif
 
 # ----- auth_db params -----
@@ -459,7 +460,7 @@ modparam("presence_xml", "force_active", 1)
 #!ifdef WITH_NAT
 #!ifdef WITH_RTPENGINE
 # ----- rtpengine params -----
-include_file "/data/rtpengine/rtpengine.k"
+# include_file "/data/rtpengine/rtpengine.k"
 #!else
 # ----- rtpproxy params -----
 modparam("rtpproxy", "rtpproxy_sock", "udp:127.0.0.1:7722")
