--- a/kamailio/Dockerfile
+++ b/kamailio/Dockerfile
@@ -8,8 +8,8 @@ RUN apt-get update && \
 # Install kamailio
 RUN curl -qO http://deb.kamailio.org/kamailiodebkey.gpg && \
     apt-key add kamailiodebkey.gpg && \
-    echo "deb http://deb.kamailio.org/kamailio55 buster main\ndeb-src http://deb.kamailio.org/kamailio55 buster main" > /etc/apt/sources.list.d/kamailio.list
-RUN apt-get update &&  apt-get install -y kamailio kamailio-json-modules kamailio-utils-modules kamailio-extra-modules kamailio-nth && apt-get clean
+    echo "deb http://deb.kamailio.org/kamailio56 buster main\ndeb-src http://deb.kamailio.org/kamailio56 buster main" > /etc/apt/sources.list.d/kamailio.list
+RUN apt-get update &&  apt-get install -y kamailio kamailio-json-modules kamailio-utils-modules kamailio-extra-modules kamailio-nth kamailio-tls-modules kamailio-mysql-modules default-libmysqlclient-dev gnutls-bin && apt-get clean
 
 # Download netdiscover
 RUN curl -qL -o /usr/bin/netdiscover https://github.com/CyCoreSystems/netdiscover/releases/download/v1.2.5/netdiscover.linux.amd64
