--- a/k8s/configs/kamailio.cfg
+++ b/k8s/configs/kamailio.cfg
@@ -82,7 +82,7 @@ include_file "/data/rtpengine/db_url.k"
 #
 # *** To enable multi-domain support execute:
 #     - enable mysql
-#     - define WITH_MULTIDOMAIN
+#     define WITH_MULTIDOMAIN
 #
 # *** To enable TLS support execute:
 #     - adjust CFGDIR/tls.cfg as needed
@@ -142,7 +142,8 @@ import_file "kamailio-local.cfg"
 #!ifdef WITH_MYSQL
 # - database URL - used to connect to database server by modules such
 #       as: auth_db, acc, usrloc, a.s.o.
-#!trydef DBURL "mysql://kamailio:kamailiorw@localhost/kamailio"
+#!trydef DBURL "mysql://kamailio:kamailiorw@mysqldb/kamailio"
+#!trydef CONTACT_DB "contacts_db=>mysql://kamailio:kamailiorw@mysqldb/kamailio"
 #!endif
 
 #!ifdef WITH_MULTIDOMAIN
@@ -328,6 +329,8 @@ loadmodule "pike.so"
 loadmodule "debugger.so"
 #!endif
 
+loadmodule "sqlops.so"
+
 # ----------------- setting module-specific parameters ---------------
 
 
@@ -404,7 +407,7 @@ modparam("acc", "db_extra",
 #!endif
 
 # ----- usrloc params -----
-modparam("usrloc", "timer_interval", 60)
+modparam("usrloc", "timer_interval", 5)
 modparam("usrloc", "timer_procs", 1)
 modparam("usrloc", "use_domain", MULTIDOMAIN)
 /* enable DB persistency for location entries */
@@ -461,15 +464,16 @@ modparam("presence_xml", "force_active", 1)
 #!ifdef WITH_RTPENGINE
 # ----- rtpengine params -----
 # include_file "/data/rtpengine/rtpengine.k"
+modparam("rtpengine", "db_url", DBURL)
 #!else
 # ----- rtpproxy params -----
 modparam("rtpproxy", "rtpproxy_sock", "udp:127.0.0.1:7722")
 #!endif
 # ----- nathelper params -----
-# modparam("nathelper", "natping_interval", 30)
+modparam("nathelper", "natping_interval", 30)
 # modparam("nathelper", "ping_nated_only", 1)
-# modparam("nathelper", "sipping_bflag", FLB_NATSIPPING)
-# modparam("nathelper", "sipping_from", "sip:pinger@kamailio.org")
+modparam("nathelper", "sipping_bflag", FLB_NATSIPPING)
+modparam("nathelper", "sipping_from", "sip:pinger@kamailio.org")
 
 # params needed for NAT traversal in other modules
 modparam("nathelper|registrar", "received_avp", "$avp(RECEIVED)")
@@ -497,6 +501,8 @@ modparam("htable", "htable", "ipban=>size=8;autoexpire=300;")
 modparam("debugger", "cfgtrace", 1)
 modparam("debugger", "log_level_name", "exec")
 #!endif
+
+modparam("sqlops","sqlcon",CONTACT_DB)
 
 ####### Routing Logic ########
 
@@ -723,20 +729,39 @@ route[LOCATION] {
 #!endif
 
 	$avp(oexten) = $rU;
-	if (!lookup("location")) {
-		$var(rc) = $rc;
-		route(TOVOICEMAIL);
-		t_newtran();
-		switch ($var(rc)) {
-			case -1:
-			case -3:
-				send_reply("404", "Not Found");
-				exit;
-			case -2:
-				send_reply("405", "Method Not Allowed");
-				exit;
-		}
-	}
+
+    sql_query("contacts_db", "select username, socket from location where username = $rU;", "result_sql");
+
+    if($dbr(result_sql=>rows) > 0){
+        regex_substring("$dbr(result_sql=>[0,1])", "([0-9]{1,3}.[0-9]{1,3}.[0-9]{1,3}.[0-9]{1,3}):([0-9]+)", 1, 3, "$var(registerar_ip)");
+        # xlog("L_WARN", "$var(registerar_ip) $rd");
+        if(is_myself($var(registerar_ip))){
+          lookup("location");
+        } else {
+	      $du= "sip:" + $var(registerar_ip);
+          # forward();
+          # exit;
+      }
+    } else {
+		send_reply("404", "Not Found");
+        exit;
+    }
+
+
+	# if (!lookup("location")) {
+	# 	$var(rc) = $rc;
+	# 	route(TOVOICEMAIL);
+	# 	t_newtran();
+	# 	switch ($var(rc)) {
+	# 		case -1:
+	# 		case -3:
+	# 			send_reply("404", "Not Found");
+	# 			exit;
+	# 		case -2:
+	# 			send_reply("405", "Method Not Allowed");
+	# 			exit;
+	# 	}
+	# }
 
 	# when routing via usrloc, log the missed calls also
 	if (is_method("INVITE")) {
@@ -1058,5 +1083,3 @@ failure_route[MANAGE_FAILURE] {
 	}
 #!endif
 }
-
-
