--- a/k8s/configs/kamailio.cfg
+++ b/k8s/configs/kamailio.cfg
@@ -407,13 +407,16 @@ modparam("acc", "db_extra",
 #!endif
 
 # ----- usrloc params -----
-modparam("usrloc", "timer_interval", 5)
-modparam("usrloc", "timer_procs", 1)
 modparam("usrloc", "use_domain", MULTIDOMAIN)
 /* enable DB persistency for location entries */
 #!ifdef WITH_USRLOCDB
 modparam("usrloc", "db_url", DBURL)
-modparam("usrloc", "db_mode", 3)
+# modparam("usrloc", "ka_mode", 1)
+modparam("usrloc", "db_mode", 1)
+# modparam("usrloc", "timer_interval", 30)
+# modparam("usrloc", "db_timer_clean", 1)
+# modparam("usrloc", "timer_procs", 2)
+# modparam("usrloc", "ka_timeout", 60)
 #!endif
 
 # ----- auth_db params -----
@@ -470,7 +473,10 @@ modparam("rtpengine", "db_url", DBURL)
 modparam("rtpproxy", "rtpproxy_sock", "udp:127.0.0.1:7722")
 #!endif
 # ----- nathelper params -----
+# beacuse using usrloc ping to keepalives, disable the nathelper's ping
 modparam("nathelper", "natping_interval", 30)
+modparam("nathelper", "keepalive_timeout", 60)
+modparam("nathelper", "natping_processes", 2)
 # modparam("nathelper", "ping_nated_only", 1)
 modparam("nathelper", "sipping_bflag", FLB_NATSIPPING)
 modparam("nathelper", "sipping_from", "sip:pinger@kamailio.org")
@@ -736,7 +742,20 @@ route[LOCATION] {
         regex_substring("$dbr(result_sql=>[0,1])", "([0-9]{1,3}.[0-9]{1,3}.[0-9]{1,3}.[0-9]{1,3}):([0-9]+)", 1, 3, "$var(registerar_ip)");
         # xlog("L_WARN", "$var(registerar_ip) $rd");
         if(is_myself($var(registerar_ip))){
-          lookup("location");
+	      if (!lookup("location")) {
+	      	$var(rc) = $rc;
+	      	route(TOVOICEMAIL);
+	      	t_newtran();
+	      	switch ($var(rc)) {
+	      		case -1:
+	      		case -3:
+	      			send_reply("404", "Not Found");
+	      			exit;
+	      		case -2:
+	      			send_reply("405", "Method Not Allowed");
+	      			exit;
+	      	}
+	      }
         } else {
 	      $du= "sip:" + $var(registerar_ip);
           # forward();
@@ -748,20 +767,6 @@ route[LOCATION] {
     }
 
 
-	# if (!lookup("location")) {
-	# 	$var(rc) = $rc;
-	# 	route(TOVOICEMAIL);
-	# 	t_newtran();
-	# 	switch ($var(rc)) {
-	# 		case -1:
-	# 		case -3:
-	# 			send_reply("404", "Not Found");
-	# 			exit;
-	# 		case -2:
-	# 			send_reply("405", "Method Not Allowed");
-	# 			exit;
-	# 	}
-	# }
 
 	# when routing via usrloc, log the missed calls also
 	if (is_method("INVITE")) {
