--- a/k8s/configs/kamailio.cfg
+++ b/k8s/configs/kamailio.cfg
@@ -35,7 +35,7 @@ include_file "/data/rtpengine/db_url.k"
 #
 # *** To enable authentication execute:
 #     - enable mysql
-#     - define WITH_AUTH
+#!define WITH_AUTH
 #     - add users using 'kamctl' or 'kamcli'
 #
 # *** To enable IP authentication execute:
@@ -330,6 +330,7 @@ loadmodule "debugger.so"
 #!endif
 
 loadmodule "sqlops.so"
+# loadmodule "uac.so"
 
 # ----------------- setting module-specific parameters ---------------
 
@@ -508,7 +509,15 @@ modparam("debugger", "cfgtrace", 1)
 modparam("debugger", "log_level_name", "exec")
 #!endif
 
+# ----- sqlops params -----
 modparam("sqlops","sqlcon",CONTACT_DB)
+
+# ----- uac params -----
+# modparam("uac", "reg_contact_addr", "10.0.1.252:5060")
+# modparam("uac", "reg_db_url", DBURL)
+# modparam("uac","auth_username_avp","$avp(auser)")
+# modparam("uac","auth_password_avp","$avp(apass)")
+# modparam("uac","auth_realm_avp","$avp(arealm)")
 
 ####### Routing Logic ########
 
