make authentication as a carrier link in k8s network

--- a/k8s/configs/kamailio.cfg
+++ b/k8s/configs/kamailio.cfg
@@ -41,7 +41,7 @@ include_file "/data/rtpengine/db_url.k"
 # *** To enable IP authentication execute:
 #     - enable mysql
 #     - enable authentication
-#     - define WITH_IPAUTH
+#!define WITH_IPAUTH
 #     - add IP addresses with group id '1' to 'address' table
 #
 # *** To enable persistent user location execute:
