--- a/watcher/Dockerfile
+++ b/watcher/Dockerfile
@@ -1,10 +1,7 @@
 FROM python:3.9
 
-COPY requirements.txt ./
+COPY requirements.txt database_controller.py main.py reload_kamailio.py /
 
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY database_controller.py main.py /
-
 CMD ["python", "/main.py"]
-
