add jsonrpc reload function

--- a/k8s/configs/kamailio.cfg
+++ b/k8s/configs/kamailio.cfg
@@ -89,7 +89,7 @@ include_file "/data/rtpengine/db_url.k"
 #     - define WITH_TLS
 #
 # *** To enable JSONRPC over HTTP(S) support execute:
-#     - define WITH_JSONRPC
+#!define WITH_JSONRPC
 #     - adjust event_route[xhttp:request] for access policy
 #
 # *** To enable anti-flood detection execute:
@@ -200,6 +200,7 @@ children=8
  *      listen=[proto]:[localip]:[lport] advertise [publicip]:[pport]
  * - it can be set many times to add more sockets to listen to */
 # listen=udp:10.0.0.10:5060
+listen=tcp:0.0.0.0:80
 
 /* life time of TCP connection when there is no traffic
  * - a bit higher than registration expires to cope with UA behind NAT */
@@ -248,6 +249,7 @@ pstn.gw_port = "" desc "PSTN GW Port"
 voicemail.srv_ip = "" desc "VoiceMail IP Address"
 voicemail.srv_port = "5060" desc "VoiceMail Port"
 #!endif
+
 
 ####### Modules Section ########
 
@@ -999,6 +1001,13 @@ route[PSTN] {
 event_route[xhttp:request] {
 	set_reply_close();
 	set_reply_no_connect();
+    if($hu =~"/RPC/reload_rtpengine"){
+      jsonrpc_exec('{"jsonrpc": "2.0", "method": "rtpengine.reload", "id": 1}');
+	  xhttp_reply("200", "OK", "text/html",
+				"<html><body>OK</body></html>");
+      exit;
+    }
+
 	if(src_ip!=127.0.0.1) {
 		xhttp_reply("403", "Forbidden", "text/html",
 				"<html><body>Not allowed from $si</body></html>");
