--- a/k8s/03-kamailio.yaml
+++ b/k8s/03-kamailio.yaml
@@ -61,6 +61,23 @@ spec:
       targetPort: 5060
 
 ---
+apiVersion: v1
+kind: Service
+metadata:
+  name: kamailio-headless
+  labels:
+    app: kamailio
+spec:
+  type: LoadBalancer
+  selector:
+    app: kamailio
+  ports:
+    - name: http
+      protocol: TCP
+      port: 80
+      targetPort: 80
+
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -68,7 +85,7 @@ metadata:
   labels:
     app: kamailio
 spec:
-  replicas: 5
+  replicas: 1
   selector:
     matchLabels:
       app: kamailio
