--- a/k8s/configs/kamailio.cfg
+++ b/k8s/configs/kamailio.cfg
@@ -565,7 +565,20 @@ request_route {
 	# record routing for dialog forming requests (in case they are routed)
 	# - remove preloaded route headers
 	remove_hf("Route");
-	if (is_method("INVITE|SUBSCRIBE")) {
+  
+    if(is_method("INVITE")){
+        sql_query("contacts_db", "select username, socket from location where username = $rU;", "result_sql");
+        regex_substring("$dbr(result_sql=>[0,1])", "([0-9]{1,3}.[0-9]{1,3}.[0-9]{1,3}.[0-9]{1,3}):([0-9]+)", 1, 3, "$var(registerar_ip)");
+        if(is_myself($var(registerar_ip))){
+            record_route();
+            record_route_preset(LB_IP);
+        } else {
+            record_route_preset(LB_IP);
+            record_route();
+        }
+    }
+
+	if (is_method("SUBSCRIBE")) {
 		record_route();
 	}
 
@@ -747,10 +760,7 @@ route[LOCATION] {
 
 	$avp(oexten) = $rU;
 
-    sql_query("contacts_db", "select username, socket from location where username = $rU;", "result_sql");
-
     if($dbr(result_sql=>rows) > 0){
-        regex_substring("$dbr(result_sql=>[0,1])", "([0-9]{1,3}.[0-9]{1,3}.[0-9]{1,3}.[0-9]{1,3}):([0-9]+)", 1, 3, "$var(registerar_ip)");
         # xlog("L_WARN", "$var(registerar_ip) $rd");
         if(is_myself($var(registerar_ip))){
 	      if (!lookup("location")) {
