--- a/k8s/configs/kamailio.cfg
+++ b/k8s/configs/kamailio.cfg
@@ -367,6 +367,8 @@ modparam("tm", "fr_inv_timer", 120000)
 modparam("rr", "enable_full_lr", 0)
 # do not append from tag to the RR (no need for this script)
 modparam("rr", "append_fromtag", 0)
+# enable double record_route to send data to another registrar
+modparam("rr", "enable_double_rr", 1)
 
 # ----- registrar params -----
 modparam("registrar", "method_filtering", 1)
@@ -430,7 +432,7 @@ modparam("auth_db", "password_column", "password")
 modparam("auth_db", "load_credentials", "")
 modparam("auth_db", "use_domain", MULTIDOMAIN)
 
-# ----- permissions params -----
+# --e-- permissions params -----
 #!ifdef WITH_IPAUTH
 modparam("permissions", "db_url", DBURL)
 modparam("permissions", "load_backends", 1)
@@ -568,13 +570,35 @@ request_route {
   
     if(is_method("INVITE")){
         sql_query("contacts_db", "select username, socket from location where username = $rU;", "result_sql");
-        regex_substring("$dbr(result_sql=>[0,1])", "([0-9]{1,3}.[0-9]{1,3}.[0-9]{1,3}.[0-9]{1,3}):([0-9]+)", 1, 3, "$var(registerar_ip)");
-        if(is_myself($var(registerar_ip))){
-            record_route();
-            record_route_preset(LB_IP);
+        regex_substring("$dbr(result_sql=>[0,1])", "([0-9]{1,3}.[0-9]{1,3}.[0-9]{1,3}.[0-9]{1,3}):([0-9]+)", 1, 3, "$var(rU_reg_ip)");
+        if(is_myself($var(rU_reg_ip))){
+            sql_query("contacts_db", "select username, socket from location where username = $fU;", "result_sql_1");
+            regex_substring("$dbr(result_sql_1=>[0,1])", "([0-9]{1,3}.[0-9]{1,3}.[0-9]{1,3}.[0-9]{1,3}):([0-9]+)", 1, 3, "$var(fU_reg_ip)");
+			xlog("L_ALERT","request URI host is $var(rU_reg_ip), from URI host is $var(fU_reg_ip)\n");
+            if($var(fU_reg_ip) != $var(rU_reg_ip)){
+                record_route_preset(LB_IP, LOCAL_IP);
+            } else {
+                # record_route();
+                record_route_advertised_address(LB_IP);
+            }
+
+            # record_route();
+            # record_route_preset($var(rU_reg_ip), LB_IP);
+
+            # record_route_preset(LB_IP, LOCAL_IP);
+            #
+            # record_route_advertised_address(LOCAL_IP);
+            # record_route_advertised_address(LB_IP);
+
+            # record_route_preset(LB_IP);
         } else {
-            record_route_preset(LB_IP);
-            record_route();
+            record_route_preset(LOCAL_IP, LB_IP);
+            # record_route();
+            #
+            # record_route_advertised_address(LB_IP);
+            # record_route_advertised_address(LOCAL_IP);
+            # record_route_preset(LB_IP);
+            # record_route();
         }
     }
 
@@ -761,8 +785,8 @@ route[LOCATION] {
 	$avp(oexten) = $rU;
 
     if($dbr(result_sql=>rows) > 0){
-        # xlog("L_WARN", "$var(registerar_ip) $rd");
-        if(is_myself($var(registerar_ip))){
+        # xlog("L_WARN", "$var(rU_reg_ip) $rd");
+        if(is_myself($var(rU_reg_ip))){
 	      if (!lookup("location")) {
 	      	$var(rc) = $rc;
 	      	route(TOVOICEMAIL);
@@ -778,7 +802,7 @@ route[LOCATION] {
 	      	}
 	      }
         } else {
-	      $du= "sip:" + $var(registerar_ip);
+	      $du= "sip:" + $var(rU_reg_ip);
           # forward();
           # exit;
       }
