--- a/k8s/configs/kamailio.cfg
+++ b/k8s/configs/kamailio.cfg
@@ -250,7 +250,6 @@ voicemail.srv_ip = "" desc "VoiceMail IP Address"
 voicemail.srv_port = "5060" desc "VoiceMail Port"
 #!endif
 
-
 ####### Modules Section ########
 
 /* set paths to location of modules */
@@ -366,9 +365,10 @@ modparam("tm", "fr_inv_timer", 120000)
 # set next param to 1 to add value to ;lr param (helps with some UAs)
 modparam("rr", "enable_full_lr", 0)
 # do not append from tag to the RR (no need for this script)
-modparam("rr", "append_fromtag", 0)
+modparam("rr", "append_fromtag", 1)
 # enable double record_route to send data to another registrar
 modparam("rr", "enable_double_rr", 1)
+# modparam("rr", "force_send_socket", 1)
 
 # ----- registrar params -----
 modparam("registrar", "method_filtering", 1)
@@ -576,6 +576,7 @@ request_route {
             regex_substring("$dbr(result_sql_1=>[0,1])", "([0-9]{1,3}.[0-9]{1,3}.[0-9]{1,3}.[0-9]{1,3}):([0-9]+)", 1, 3, "$var(fU_reg_ip)");
 			xlog("L_ALERT","request URI host is $var(rU_reg_ip), from URI host is $var(fU_reg_ip)\n");
             if($var(fU_reg_ip) != $var(rU_reg_ip)){
+                # record_route();
                 record_route_preset(LB_IP, LOCAL_IP);
             } else {
                 # record_route();
@@ -710,6 +711,10 @@ route[WITHINDLG] {
 	# sequential request withing a dialog should
 	# take the path determined by record-routing
 	if (loose_route()) {
+        # remove header that contain K7s loadbalancer's IP
+        subst_hf("Route", "/,<sip:10\.22\.22\.120[a-zA-Z;=]+>//", "l");
+        # remove_hf_match("Route", "re", "<sip:9.22.22.120.*>");
+
 		route(DLGURI);
 		if (is_method("BYE")) {
 			setflag(FLT_ACC); # do accounting ...
