fix some route set uri could not be remove, so just use lookup when dU is ???@LB_IP

--- a/k8s/03-kamailio.yaml
+++ b/k8s/03-kamailio.yaml
@@ -115,8 +115,8 @@ spec:
       containers:
       - name: kamailio
         # image: efficacy38/kamailio:v1.13
-        image: efficacy38/kamailio:v1.14
-        # imagePullPolicy: Always
+        image: efficacy38/kamailio:v1.15
+        imagePullPolicy: Always
         # command: ["sleep", "infinity"]
         ports:
         - containerPort: 5060
