--- a/k8s/configs/kamailio.cfg
+++ b/k8s/configs/kamailio.cfg
@@ -712,8 +712,22 @@ route[WITHINDLG] {
 	# take the path determined by record-routing
 	if (loose_route()) {
         # remove header that contain K7s loadbalancer's IP
-        subst_hf("Route", "/,<sip:10\.22\.22\.120[a-zA-Z;=]+>//", "l");
+        # subst_hf("Route", "/,<sip:10\.22\.22\.120[a-zA-Z;=]+>//", "l");
         # remove_hf_match("Route", "re", "<sip:9.22.22.120.*>");
+        if( $du =~ "10\.22\.22\.120" ){
+                if (!lookup("location")) {
+                  $var(rc) = $rc;
+                  switch ($var(rc)) {
+                          case -1:
+                          case -3:
+                                  send_reply("404", "Not Found");
+                                  exit;
+                          case -2:
+                                  send_reply("405", "Method Not Allowed");
+                                  exit;
+                  }
+                }
+        }
 
 		route(DLGURI);
 		if (is_method("BYE")) {
