--- a/k8s/configs/kamailio.cfg
+++ b/k8s/configs/kamailio.cfg
@@ -434,7 +434,7 @@ modparam("auth_db", "use_domain", MULTIDOMAIN)
 
 # --e-- permissions params -----
 #!ifdef WITH_IPAUTH
-modparam("permissions", "db_url", DBURL)
+modparam("permissions", "db_url", RODBURL)
 modparam("permissions", "load_backends", 1)
 #!endif
 
@@ -472,7 +472,7 @@ modparam("presence_xml", "force_active", 1)
 #!ifdef WITH_RTPENGINE
 # ----- rtpengine params -----
 # include_file "/data/rtpengine/rtpengine.k"
-modparam("rtpengine", "db_url", DBURL)
+modparam("rtpengine", "db_url", RODBURL)
 #!else
 # ----- rtpproxy params -----
 modparam("rtpproxy", "rtpproxy_sock", "udp:127.0.0.1:7722")
