change hard codeed loadbalancer IP

--- a/k8s/configs/kamailio.cfg
+++ b/k8s/configs/kamailio.cfg
@@ -714,7 +714,8 @@ route[WITHINDLG] {
         # remove header that contain K7s loadbalancer's IP
         # subst_hf("Route", "/,<sip:10\.22\.22\.120[a-zA-Z;=]+>//", "l");
         # remove_hf_match("Route", "re", "<sip:9.22.22.120.*>");
-        if( $du =~ "10\.22\.22\.120" ){
+        # if( $du =~ "10\.22\.22\.120" ){
+        if( $du =~ "LOADBALANCER_IP_REGEX_PATTERN_IP" ){
                 if (!lookup("location")) {
                   $var(rc) = $rc;
                   switch ($var(rc)) {
