--- a/k8s/configs/kamailio.cfg
+++ b/k8s/configs/kamailio.cfg
@@ -2,7 +2,10 @@
 
 # add some global parameters,like alias
 include_file "/data/kamailio/local.k"
+# define database
 include_file "/data/rtpengine/db_url.k"
+# define server id
+include_file "/data/rtpengine/server_id.k"
 #
 # Kamailio SIP Server v5.5 - default configuration script
 #     - web: https://www.kamailio.org
@@ -416,12 +419,20 @@ modparam("usrloc", "use_domain", MULTIDOMAIN)
 /* enable DB persistency for location entries */
 #!ifdef WITH_USRLOCDB
 modparam("usrloc", "db_url", DBURL)
-# modparam("usrloc", "ka_mode", 1)
+
+# load or delete expire record would talk server id into account
+modparam("usrloc", "server_id_filter", 1)
+# keepalives only send to record that matching server_id
+modparam("usrloc", "ka_filter", 1)
+# send keepalive SIP packet for all contacts
+modparam("usrloc", "ka_mode", 1)
+# write through mode, all change would immediate perform at db
 modparam("usrloc", "db_mode", 1)
-# modparam("usrloc", "timer_interval", 30)
-# modparam("usrloc", "db_timer_clean", 1)
-# modparam("usrloc", "timer_procs", 2)
-# modparam("usrloc", "ka_timeout", 60)
+# would clean expired record with timer
+modparam("usrloc", "db_timer_clean", 1)
+modparam("usrloc", "timer_interval", 30)
+modparam("usrloc", "timer_procs", 2)
+modparam("usrloc", "ka_timeout", 60)
 #!endif
 
 # ----- auth_db params -----
@@ -479,12 +490,12 @@ modparam("rtpproxy", "rtpproxy_sock", "udp:127.0.0.1:7722")
 #!endif
 # ----- nathelper params -----
 # beacuse using usrloc ping to keepalives, disable the nathelper's ping
-modparam("nathelper", "natping_interval", 30)
-modparam("nathelper", "keepalive_timeout", 60)
-modparam("nathelper", "natping_processes", 2)
+# modparam("nathelper", "natping_interval", 30)
+# modparam("nathelper", "keepalive_timeout", 60)
+# modparam("nathelper", "natping_processes", 2)
 # modparam("nathelper", "ping_nated_only", 1)
 modparam("nathelper", "sipping_bflag", FLB_NATSIPPING)
-modparam("nathelper", "sipping_from", "sip:pinger@kamailio.org")
+# modparam("nathelper", "sipping_from", "sip:pinger@kamailio.org")
 
 # params needed for NAT traversal in other modules
 modparam("nathelper|registrar", "received_avp", "$avp(RECEIVED)")
@@ -569,18 +580,20 @@ request_route {
 	remove_hf("Route");
   
     if(is_method("INVITE")){
-        sql_query("contacts_db", "select username, socket from location where username = $rU;", "result_sql");
+        # find the most fresh request URI record in the db
+        sql_query("contacts_db", "SELECT username, socket FROM location WHERE username = $rU ORDER BY expires DESC;", "result_sql");
         regex_substring("$dbr(result_sql=>[0,1])", "([0-9]{1,3}.[0-9]{1,3}.[0-9]{1,3}.[0-9]{1,3}):([0-9]+)", 1, 3, "$var(rU_reg_ip)");
         if(is_myself($var(rU_reg_ip))){
-            sql_query("contacts_db", "select username, socket from location where username = $fU;", "result_sql_1");
+            # find the most fresh from URI record in the db
+            sql_query("contacts_db", "select username, socket from location where username = $fU ORDER BY expires DESC;", "result_sql_1");
             regex_substring("$dbr(result_sql_1=>[0,1])", "([0-9]{1,3}.[0-9]{1,3}.[0-9]{1,3}.[0-9]{1,3}):([0-9]+)", 1, 3, "$var(fU_reg_ip)");
 			xlog("L_ALERT","request URI host is $var(rU_reg_ip), from URI host is $var(fU_reg_ip)\n");
-            if($var(fU_reg_ip) != $var(rU_reg_ip)){
-                # record_route();
-                record_route_preset(LB_IP, LOCAL_IP);
-            } else {
+            if($var(rU_reg_ip) == $var(fU_reg_ip)){
                 # record_route();
                 record_route_advertised_address(LB_IP);
+            } else {
+                # record_route();
+                record_route_preset(LB_IP, LOCAL_IP);
             }
 
             # record_route();
@@ -716,18 +729,7 @@ route[WITHINDLG] {
         # remove_hf_match("Route", "re", "<sip:9.22.22.120.*>");
         # if( $du =~ "10\.22\.22\.120" ){
         if( $du =~ "LOADBALANCER_IP_REGEX_PATTERN_IP" ){
-                if (!lookup("location")) {
-                  $var(rc) = $rc;
-                  switch ($var(rc)) {
-                          case -1:
-                          case -3:
-                                  send_reply("404", "Not Found");
-                                  exit;
-                          case -2:
-                                  send_reply("405", "Method Not Allowed");
-                                  exit;
-                  }
-                }
+          $du = "sip:" + LOCAL_IP;
         }
 
 		route(DLGURI);
